Update div height for buttons to prevent overlap with medication education radio buttons

--- a/web/module/resources/pwsEskenaziEpic.css
+++ b/web/module/resources/pwsEskenaziEpic.css
@@ -63,7 +63,7 @@
 @-moz-document url-prefix() {
     #buttons {
         margin-top:5px; 
-        height:269px; 
+        height:175px; 
     }
 }
 
